WIP: experimenting with lit-element + Polymer 3.0

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "git-semver-tags": "^1.3.6"
   },
   "workspaces": [
+    "packages/components/bds-button",
     "packages/components/bolt-placeholder",
     "packages/components/bolt-action-blocks",
     "packages/components/bolt-background-shapes",
