--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,7 @@
     "@webcomponents/custom-elements": "^1.1.1",
     "@webcomponents/shadydom": "^1.0.14",
     "@webcomponents/template": "^1.2.4",
-    "@webcomponents/webcomponentsjs": "^1.1.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
     "breakpoint-sass": "^2.7.1",
     "breakpoint-slicer": "bolt-design-system/breakpoint-slicer",
     "core-js": "^2.5.6",
@@ -20,7 +20,8 @@
     "preact": "^8.2.9",
     "sassy-maps": "github:at-import/Sassy-Maps#0.x.x",
     "skatejs": "^5.1.3",
-    "yocss": "^0.5.1"
+    "yocss": "^0.5.1",
+    "@polymer/lit-element": "^0.5.1"
   },
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "homepage": "https://bolt-design-system.com",
