--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
+    "@bolt/bds-button": "0.0.0",
     "@bolt/build-tools": "^1.3.3",
     "@bolt/components-action-blocks": "^1.4.0",
     "@bolt/components-background": "^1.4.0",
