chore: updating priority-nav schema config

--- a/packages/components/bolt-priority-nav/package.json
+++ b/packages/components/bolt-priority-nav/package.json
@@ -26,6 +26,7 @@
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "main": "index.js",
   "style": "priority-nav.scss",
+  "schema": "priority-nav.schema.yml",
   "publishConfig": {
     "access": "public"
   },
