--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/pattern-lab",
   "description": "Bolt Design System",
-  "version": "1.4.0",
+  "version": "1.5.0-beta.0",
   "private": true,
   "license": "MIT",
   "main": "bolt.js",
@@ -21,7 +21,6 @@
   "dependencies": {
     "@bolt/build-tools": "^1.3.3",
     "@bolt/components-action-blocks": "^1.4.0",
-    "@bolt/components-priority-nav": "^1.3.0",
     "@bolt/components-background": "^1.4.0",
     "@bolt/components-background-shapes": "^1.4.0",
     "@bolt/components-band": "^1.4.0",
@@ -43,13 +42,14 @@
     "@bolt/components-image": "^1.4.0",
     "@bolt/components-link": "^1.4.0",
     "@bolt/components-logo": "^1.4.0",
-    "@bolt/components-nav": "^1.4.0",
-    "@bolt/components-navbar": "^1.4.0",
-    "@bolt/components-navlink": "^1.4.0",
+    "@bolt/components-nav": "^1.5.0-beta.0",
+    "@bolt/components-navbar": "^1.5.0-beta.0",
+    "@bolt/components-navlink": "^1.5.0-beta.0",
     "@bolt/components-ordered-list": "^1.4.0",
     "@bolt/components-page-footer": "file:../../packages/components/bolt-page-footer",
     "@bolt/components-page-header": "^1.4.0",
     "@bolt/components-placeholder": "^1.4.0",
+    "@bolt/components-priority-nav": "^1.5.0-beta.0",
     "@bolt/components-share": "^1.4.0",
     "@bolt/components-site": "^1.4.0",
     "@bolt/components-smooth-scroll": "^1.4.0",
