--- a/packages/components/bolt-priority-nav/package.json
+++ b/packages/components/bolt-priority-nav/package.json
@@ -7,7 +7,7 @@
     "design system",
     "components"
   ],
-  "version": "1.3.0",
+  "version": "1.5.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
