--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -42,7 +42,7 @@
     "@bolt/components-image": "^1.4.0",
     "@bolt/components-link": "^1.4.0",
     "@bolt/components-logo": "^1.4.0",
-    "@bolt/components-nav": "^1.5.0-beta.0",
+    "@bolt/components-nav-indicator": "^1.5.0-beta.0",
     "@bolt/components-navbar": "^1.5.0-beta.0",
     "@bolt/components-navlink": "^1.5.0-beta.0",
     "@bolt/components-ordered-list": "^1.4.0",
