refactor: Update validation syntax for performance (BDS-237)

--- a/packages/components/bolt-block-list/package.json
+++ b/packages/components/bolt-block-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-block-list",
   "description": "Block-list Component in Bolt",
-  "version": "1.4.0",
+  "version": "1.3.0",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
   "repository": {
@@ -11,6 +11,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
+  "schema": "block-list.schema.yml",
   "style": "src/block-list.scss",
   "main": "src/block-list.js",
   "twig": "src/block-list.twig",
