refactor: Update validation syntax for performance (BDS-237)

--- a/packages/components/bolt-video/package.json
+++ b/packages/components/bolt-video/package.json
@@ -26,6 +26,7 @@
 	"license": "MIT",
 	"repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-video",
 	"bugs": "https://github.com/bolt-design-system/bolt/issues",
+	"schema": "video.schema.yml",
 	"style": "src/video.scss",
 	"main": "src/video.js",
 	"publishConfig": {
