WIP: stashing working version -- cleanup in progress!

--- a/packages/components/bolt-navlink/package.json
+++ b/packages/components/bolt-navlink/package.json
@@ -30,6 +30,7 @@
   "style": "navlink.scss",
   "main": "index.js",
   "dependencies": {
-    "@bolt/core": "^1.4.0"
+    "@bolt/core": "^1.4.0",
+    "is-visible": "^2.2.0"
   }
 }
