--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "setup": "yarn && yarn run bootstrap && yarn run composer",
     "build:pl": "cd apps/pattern-lab && yarn run build:prod",
     "build:bolt-site": "cd apps/bolt-site && yarn run build:prod",
-    "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && yarn run build && cd - && composer run build",
+    "build:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && yarn run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- yarn run build",
     "build": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
@@ -37,6 +37,9 @@
     "Xpostbootstrap": "yarn run build:icons && node scripts/monorepo-tests.js",
     "Xpredeploy": "yarn run build",
     "deploy": "./scripts/deploy.js",
+    "docker:build": "docker build --tag bolt-drupal-lab .",
+    "docker:serve": "docker run --port 4000:80 bolt-drupal-lab",
+    "docker:start": "yarn run docker:build && yarn run docker:serve",
     "clean:git": "git clean -xdf && rm -rf apps/**/vendor apps/**/node_modules && find . -empty -type d -delete",
     "clean:lerna": "lerna clean -Y",
     "clean": "npm-run-all --parallel clean:*",
