refactor: initial rename of priority-nav to nav-priority

--- a/packages/components/bolt-nav-priority/package.json
+++ b/packages/components/bolt-nav-priority/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/components-priority-nav",
+  "name": "@bolt/components-nav-priority",
   "description": "Priority+ Nav Component in Bolt",
   "keywords": [
     "bolt design system",
@@ -22,11 +22,11 @@
   ],
   "homepage": "https://bolt-design-system.com",
   "license": "MIT",
-  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-priority-nav",
+  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/components/bolt-nav-priority",
   "bugs": "https://github.com/bolt-design-system/bolt/issues",
   "main": "index.js",
-  "style": "priority-nav.scss",
-  "schema": "priority-nav.schema.yml",
+  "style": "nav-priority.scss",
+  "schema": "nav-priority.schema.yml",
   "publishConfig": {
     "access": "public"
   },
