initial commit: porting over latest versions of Pattern Lab's ui-storefront and Styleguidekit Twig Default packages; updating to fix compatibility with PHP Twig

--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "packages/components/bolt-video",
     "packages/core",
     "packages/global",
+    "packages/styleguidekit-assets-bolt",
     "packages/build-tools",
     "packages/config-presets/babel-preset-bolt",
     "packages/config-presets/config-browserlist",
