--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -22,6 +22,7 @@
     }
   ],
   "dependencies": {
+    "copy-webpack-plugin": "^4.5.1",
     "@bolt/babel-preset-bolt": "^1.2.1",
     "@theme-tools/sass-export-data": "^1.1.1",
     "autoprefixer": "^8.5.0",
