WIP: initial pass breaking apart PL legacy JavaScript into separate standalone components with dependencies

--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "packages/core",
     "packages/global",
     "packages/styleguidekit-assets-bolt",
+    "packages/styleguidekit-assets-bolt/**",
     "packages/build-tools",
     "packages/config-presets/babel-preset-bolt",
     "packages/config-presets/config-browserlist",
