--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -22,6 +22,8 @@
     }
   ],
   "dependencies": {
+    "twig-loader": "^0.4.0",
+    "html-webpack-plugin": "^3.2.0",
     "copy-webpack-plugin": "^4.5.1",
     "@bolt/babel-preset-bolt": "^1.2.1",
     "@theme-tools/sass-export-data": "^1.1.1",
