--- a/packages/styleguidekit-assets-bolt/package.json
+++ b/packages/styleguidekit-assets-bolt/package.json
@@ -29,29 +29,19 @@
   "repository": "https://github.com/pattern-lab/patternlab-node/tree/master/packages/uikit-workshop",
   "bugs": "https://github.com/pattern-lab/patternlab-node/issues",
   "devDependencies": {
-    "@bolt/build-tools": "^1.3.3",
-    "del": "^1.1.1",
-    "gulp": "^3.8.6",
-    "gulp-autoprefixer": "^2.1",
-    "gulp-concat": "^2.3.4",
-    "gulp-file-include": "^0.13.7",
-    "gulp-imagemin": "^0.6.1",
-    "gulp-jshint": "^1.8.0",
-    "gulp-load-plugins": "^0.5.3",
-    "gulp-minify-css": "^0.3.7",
-    "gulp-rename": "^1.2.0",
-    "gulp-resolve-dependencies": "^1.0.1",
-    "gulp-ruby-sass": "^3.0.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.0",
-    "imagemin-pngcrush": "^0.1.0",
-    "main-bower-files": "^1.0.2",
-    "yargs": "^1.2.6"
+    "@bolt/build-tools": "^1.3.3"
   },
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "bower": "^1.8.2"
+    "clipboard": "^2.0.1",
+    "jquery": "^3.3.1",
+    "jwerty": "^0.3.2",
+    "prism": "^4.1.2",
+    "typeahead.js": "^0.11.1",
+    "hogan.js": "^3.0.2",
+    "scriptjs": "^2.5.8",
+    "wolfy87-eventemitter": "^5.2.4"
   }
 }
