--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "packages/components/bolt-chip",
     "packages/components/bolt-copy-to-clipboard",
     "packages/components/bolt-critical-fonts",
+    "packages/components/bolt-critical-polyfills",
     "packages/components/bolt-device-viewer",
     "packages/components/bolt-figure",
     "packages/components/bolt-form",
