refactor: add missing deps to docs site

--- a/apps/bolt-site/package.json
+++ b/apps/bolt-site/package.json
@@ -30,6 +30,8 @@
     "@bolt/components-card": "^1.4.0",
     "@bolt/components-chip": "^1.4.0",
     "@bolt/components-chip-list": "^1.4.0",
+    "@bolt/components-critical-fonts": "^1.4.0",
+    "@bolt/components-critical-polyfills": "^1.4.0",
     "@bolt/components-device-viewer": "^1.4.0",
     "@bolt/components-figure": "^1.4.0",
     "@bolt/components-headline": "^1.4.0",
