Video Enhancement - Collapse video when hitting the "escape" key

--- a/packages/components/bolt-video/package.json
+++ b/packages/components/bolt-video/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"@bolt/components-button": "^1.4.0",
 		"@bolt/core": "^1.4.0",
-		"dasherize": "^2.0.0"
+		"dasherize": "^2.0.0",
+		"mousetrap": "^1.6.1"
 	}
 }
