chore: setting private flag till refactoring work on the text component is completed.

--- a/packages/components/bolt-text/package.json
+++ b/packages/components/bolt-text/package.json
@@ -17,6 +17,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "private": true,
   "dependencies": {
     "@bolt/components-link": "^1.1.2",
     "@bolt/core": "^1.3.0"
