refactor: remove snabbdom renderer, update preact renderer to support most built-in methods supported by HyperHTML base component; update code-snippet component to use Preact renderer; update Preact renderer to support rendering template literals via preact-html; fix @decorator babel plugin.

--- a/packages/components/bolt-code-snippet/package.json
+++ b/packages/components/bolt-code-snippet/package.json
@@ -39,14 +39,6 @@
   },
   "dependencies": {
     "@bolt/core": "^1.1.2",
-    "prismjs": "^1.13.0",
-    "refractor": "^2.3.0",
-    "rehype": "^5.0.1",
-    "snabbdom-to-html": "^5.1.0",
-    "snabbdom": "^0.7.1",
-    "hast-util-to-snabbdom": "^0.1.4",
-    "hast-to-hyperscript": "^4.0.0",
-    "snabby": "^1.0.0",
-    "snabbdom-virtualize": "0.7.0"
+    "prismjs": "^1.14.0"
   }
 }
