--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,7 @@
     "es6-promise": "^4.2.4",
     "hyperhtml": "^2.10.1",
     "preact": "^8.2.9",
+    "preact-html": "^2.0.3",
     "sassy-maps": "github:at-import/Sassy-Maps#0.x.x",
     "skatejs": "^5.1.3",
     "yocss": "^0.5.1"
