--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "setup": "yarn && yarn run bootstrap && yarn run composer",
     "build:pl": "cd apps/pattern-lab && yarn run build:prod",
     "build:bolt-site": "cd apps/bolt-site && yarn run build:prod",
-    "build:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && yarn run build && cd - && composer run build",
+    "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && yarn run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- yarn run build",
     "build": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
