--- a/packages/styleguidekit-assets-bolt/src/components/pl-panels-viewer/package.json
+++ b/packages/styleguidekit-assets-bolt/src/components/pl-panels-viewer/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "prismjs": "^1.14.0"
+    "prismjs": "^1.14.0",
+    "clipboard": "^2.0.1"
   }
 }
