--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "packages/core",
     "packages/global",
     "packages/styleguidekit-assets-bolt",
-    "packages/styleguidekit-assets-bolt/**",
+    "packages/styleguidekit-assets-bolt/src/components/*",
     "packages/build-tools",
     "packages/config-presets/babel-preset-bolt",
     "packages/config-presets/config-browserlist",
