hotfix: address SVG rendering issues in Safari and Firefox in Bolt v0.x
1. Manually update SVG icon assets recently backported to address cross-browser rendering differences of the SVG <mask> elements in Safari. Updates the structure so the icons display correctly across the board.

2. Also updates the SVG build process to uniquely name each path / mask id to work around a separate issue in Firefox uncovered where certain parts of the same set of SVGs involved in this hotfix will wind up displaying in other icons when the same path / mask id is reused.

3. This hotfix also updates the npm scripts in the root of the Bolt v0.x repo to include pre-building the SVG icons when bootstrapping to avoid errors getting thrown when running a cold `npm start` command.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "backstop-test": "backstop test",
     "backstop-reference": "backstop reference",
-    "bootstrap": "lerna bootstrap --hoist",
+    "bootstrap": "lerna bootstrap --hoist && npm run build:icons",
     "lint:js": "eslint ./build-tools",
     "lint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
@@ -29,6 +29,7 @@
     "start": "gulp",
     "pre-build": "lerna exec -- npm run --if-present build",
     "build": "NODE_ENV=production npm run pre-build && NODE_ENV=production gulp build",
+    "build:icons": "lerna exec --scope @bolt/components-icons npm run build",
     "build:quick": "NODE_ENV=production gulp build",
     "build:full": "NODE_ENV=production npm run pre-build && NODE_ENV=production gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
