--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -408,6 +408,10 @@ icon:
   filename: icon.twig
   path: src/_patterns/02-components/bolt-icon/src/icon.twig
   namespace: '@bolt/icon.twig'
+icon_variations:
+  filename: icon-variations.twig
+  path: src/_patterns/02-components/bolt-icon/src/icon-variations.twig
+  namespace: '@bolt/icon-variations.twig'
 image:
   filename: image.twig
   path: src/_patterns/02-components/bolt-image/src/image.twig
