refactor: remove jwerty and replace with Mousetrap, bug fixes and misc cleanup/Users/sghoweri/sites/bolt-v2/packages/styleguidekit-assets-bolt/src/utils/postmessage.js

--- a/packages/styleguidekit-assets-bolt/src/components/pl-styleguide/package.json
+++ b/packages/styleguidekit-assets-bolt/src/components/pl-styleguide/package.json
@@ -6,6 +6,6 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "jwerty-globals-fixed": "^0.3.2"
+    "mousetrap": "^1.6.2"
   }
 }
