--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "packages/global",
     "packages/styleguidekit-assets-bolt",
     "packages/styleguidekit-assets-bolt/src/components/*",
+    "packages/styleguidekit-assets-bolt/src/**",
     "packages/build-tools",
     "packages/config-presets/babel-preset-bolt",
     "packages/config-presets/config-browserlist",
