fix: remove PL styleguidekit src folder from lerna workspaces to fix monorepo test failing

--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "packages/global",
     "packages/styleguidekit-assets-bolt",
     "packages/styleguidekit-assets-bolt/src/components/*",
-    "packages/styleguidekit-assets-bolt/src/**",
+    "packages/styleguidekit-assets-bolt/src/utils",
     "packages/build-tools",
     "packages/config-presets/babel-preset-bolt",
     "packages/config-presets/config-browserlist",
