Removing now.sh files whitelist

--- a/now.docker.json
+++ b/now.docker.json
@@ -1,9 +1,4 @@
 {
   "name": "bolt-drupal-lab",
-  "type": "docker",
-  "files": [
-    "*",
-    "packages",
-    "apps/drupal-lab"
-  ]
+  "type": "docker"
 }
