Whitelisting specific files

--- a/now.docker.json
+++ b/now.docker.json
@@ -1,4 +1,10 @@
 {
   "name": "bolt-drupal-lab",
-  "type": "docker"
+  "type": "docker",
+  "files": [
+    "package.json",
+    "yarn.lock",
+    "packages",
+    "apps/drupal-lab"
+  ]
 }
