--- a/packages/components/bolt-nav-priority/package.json
+++ b/packages/components/bolt-nav-priority/package.json
@@ -31,7 +31,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.3.0",
-    "gumshoejs": "^3.5.0"
+    "@bolt/core": "^1.3.0"
   }
 }
