--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
     "breakpoint-slicer": "bolt-design-system/breakpoint-slicer",
     "core-js": "^2.5.6",
     "document-register-element": "^1.9.0",
+    "element-closest": "^2.0.2",
     "es6-promise": "^4.2.4",
     "hyperhtml": "^2.10.8",
     "preact": "^8.2.9",
