--- a/packages/components/bolt-nav-priority/package.json
+++ b/packages/components/bolt-nav-priority/package.json
@@ -7,7 +7,7 @@
     "design system",
     "components"
   ],
-  "version": "1.5.0-beta.0",
+  "version": "1.5.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -31,6 +31,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^1.3.0"
+    "@bolt/core": "^1.5.0"
   }
 }
