--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "start": "echo 'To start up a server and watches, head into any of the folders in the apps/ directory, then run npm start there.' && echo 'If you want to start Pattern Lab, run this:' && echo '' && echo 'cd apps/pattern-lab' && echo 'npm start'",
     "setup": "yarn && yarn run bootstrap && yarn run composer",
     "build:pl": "cd apps/pattern-lab && yarn run build:prod",
-    "build:bolt-site": "cd apps/bolt-site && yarn run build:prod",
+    "build:bolt-site": "cd apps/bolt-site && yarn run build",
     "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && yarn run build && cd - && composer run build",
     "build:icons": "lerna exec --scope @bolt/components-icons -- yarn run build",
-    "build": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
+    "buildx": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
+    "build": "yarn run build:bolt-site",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
     "composer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
     "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction --prefer-dist",
