--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ language: php
 php:
   - 7.1
 
-addons:
-  sauce_connect: true
+# addons:
+#   sauce_connect: true
 
 before_install:
 - nvm install # version lifted from `.nvmrc`
-- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.7.0
 - export PATH="$HOME/.yarn/bin:$PATH"
 
 before_script:
