--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction --prefer-dist",
     "composer:pw-site": "cd apps/pw-site && composer install --no-interaction --prefer-dist",
     "composer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction --prefer-dist",
-    "composer": "npm run composer:bolt-site",
-    "composerx": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
+    "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
     "bootstrap": "lerna bootstrap --reject-cycles",
     "Xpostbootstrap": "yarn run build:icons && node scripts/monorepo-tests.js",
     "Xpredeploy": "yarn run build",
