fix: re-enabling sauce_connect

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ language: php
 php:
   - 7.1
 
-# addons:
-#   sauce_connect: true
+addons:
+  sauce_connect: true
 
 before_install:
 - nvm install # version lifted from `.nvmrc`
