test: retesting error handling on travis

--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "execa": "^0.10.0",
+    "pretty-error": "^2.1.1",
     "@bolt/babel-preset-bolt": "^1.5.0",
     "@theme-tools/sass-export-data": "^1.1.1",
     "@theme-tools/sass-import-globbing": "^1.0.1",
