test: revert shell script util updates to troubleshoot travis build error. test using npm commands instead of yarn commands while doing build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ before_script:
 - phpenv config-rm xdebug.ini
 
 install:
-- yarn run setup
+- npm run setup
 
 before_script:
-- yarn run lint
-- yarn run test
+- npm run lint
+- npm run test
 
 # Can't do deploy on `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 script:
