--- a/package.json
+++ b/package.json
@@ -22,26 +22,25 @@
   "scripts": {
     "start": "echo 'To start up a server and watches, head into any of the folders in the apps/ directory, then run npm start there.' && echo 'If you want to start Pattern Lab, run this:' && echo '' && echo 'cd apps/pattern-lab' && echo 'npm start'",
     "setup": "yarn && yarn run bootstrap && yarn run composer",
-    "build:pl": "cd apps/pattern-lab && npm run build:prod",
-    "build:bolt-site": "cd apps/bolt-site && npm run build",
-    "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && npm run build && cd - && composer run build",
-    "build:icons": "lerna exec --scope @bolt/components-icons -- npm run build",
-    "buildx": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
-    "build": "npm run build:bolt-site",
+    "build:pl": "cd apps/pattern-lab && yarn run build:prod",
+    "build:bolt-site": "cd apps/bolt-site && yarn run build",
+    "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && yarn run build && cd - && composer run build",
+    "xbuild:icons": "lerna exec --scope @bolt/components-icons -- yarn run build",
+    "build": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
-    "composer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
     "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction --prefer-dist",
-    "composer:pw-site": "cd apps/pw-site && composer install --no-interaction --prefer-dist",
-    "composer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction --prefer-dist",
     "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
+    "xcomposer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
+    "xcomposer:pw-site": "cd apps/pw-site && composer install --no-interaction --prefer-dist",
+    "xcomposer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction --prefer-dist",
     "bootstrap": "lerna bootstrap --reject-cycles",
-    "Xpostbootstrap": "npm run build:icons && node scripts/monorepo-tests.js",
-    "Xpredeploy": "npm run build",
+    "Xpostbootstrap": "yarn run build:icons && node scripts/monorepo-tests.js",
+    "Xpredeploy": "yarn run build",
     "deploy": "./scripts/deploy.js",
     "clean:git": "git clean -xdf && rm -rf apps/**/vendor apps/**/node_modules && find . -empty -type d -delete",
     "clean:lerna": "lerna clean -Y",
     "clean": "npm-run-all --parallel clean:*",
-    "prepublishOnly": "npm run build && node scripts/monorepo-tests.js",
+    "prepublishOnly": "yarn run build && node scripts/monorepo-tests.js",
     "snyk-protect": "snyk protect",
     "Xlint:editorconfig": "editorconfig-checker --exclude-pattern './www/**/*' --exclude-pattern './**/sandbox/**/*' --exclude-pattern './**/vendor/*' --exclude-pattern './apps/drupal-lab/**' ",
     "lint:js": "eslint --max-warnings 0 'packages/**/*.js' 'apps/**/*.js'",
