--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
     "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction --prefer-dist",
     "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
-    "xcomposer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
+    "composer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
     "xcomposer:pw-site": "cd apps/pw-site && composer install --no-interaction --prefer-dist",
     "xcomposer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction --prefer-dist",
     "bootstrap": "lerna bootstrap --reject-cycles",
