--- a/package.json
+++ b/package.json
@@ -25,16 +25,15 @@
     "build:pl": "cd apps/pattern-lab && yarn run build:prod",
     "build:bolt-site": "cd apps/bolt-site && yarn run build:prod",
     "Xbuild:drupal-lab": "cd apps/drupal-lab && cd web/themes/flash && yarn run build && cd - && composer run build",
-    "xbuild:icons": "lerna exec --scope @bolt/components-icons -- yarn run build",
+    "build:icons": "lerna exec --scope @bolt/components-icons -- yarn run build",
     "build": "npm-run-all build:* --aggregate-output --print-label --print-name --parallel",
     "composer:pl": "cd apps/pattern-lab && composer install --no-interaction --prefer-dist",
+    "composer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
     "composer:bolt-site": "cd apps/bolt-site && composer install --no-interaction --prefer-dist",
     "composer": "npm-run-all --parallel composer:* --aggregate-output --print-label --print-name",
-    "composer:core-php": "cd packages/core-php && composer install --no-interaction --prefer-dist",
-    "xcomposer:pw-site": "cd apps/pw-site && composer install --no-interaction --prefer-dist",
     "xcomposer:drupal-lab": "cd apps/drupal-lab && composer install --no-interaction --prefer-dist",
     "bootstrap": "lerna bootstrap --reject-cycles",
-    "Xpostbootstrap": "yarn run build:icons && node scripts/monorepo-tests.js",
+    "postbootstrap": "yarn run build:icons && node scripts/monorepo-tests.js",
     "Xpredeploy": "yarn run build",
     "deploy": "./scripts/deploy.js",
     "clean:git": "git clean -xdf && rm -rf apps/**/vendor apps/**/node_modules && find . -empty -type d -delete",
@@ -48,7 +47,7 @@
     "Xlint:sh": "which shellcheck; if [ $? -eq 0 ]; then shellcheck scripts/*.sh ; else echo 'Shell script linting requires `shellcheck` to be installed, skipping for now; use `brew install shellcheck` to install ~ https://github.com/koalaman/shellcheck '; fi",
     "lint:style": "stylelint 'packages/**/*.scss' 'apps/**/*.scss' '!apps/drupal-lab/**' '!apps/pw-site/www/**' '!**/vendor/**' --config .stylelintrc",
     "lint:style:fix": "yarn run lint:style -- --fix",
-    "xlint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors --exclude=apps/drupal-lab",
+    "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors --exclude=apps/drupal-lab",
     "lint:yaml": "yamllint 'packages/**/*.yml' --ignore='**/vendor/**'",
     "lint": "npm-run-all --continue-on-error --parallel lint:*",
     "prepush": "yarn run test && yarn run lint",
