chore: upgrade deps + remove references to pw-site in package.json npm scripts

--- a/package.json
+++ b/package.json
@@ -40,12 +40,11 @@
     "clean:lerna": "lerna clean -Y",
     "clean": "npm-run-all --parallel clean:*",
     "prepublishOnly": "yarn run build && node scripts/monorepo-tests.js",
-    "snyk-protect": "snyk protect",
     "Xlint:editorconfig": "editorconfig-checker --exclude-pattern './www/**/*' --exclude-pattern './**/sandbox/**/*' --exclude-pattern './**/vendor/*' --exclude-pattern './apps/drupal-lab/**' ",
     "lint:js": "eslint --max-warnings 0 'packages/**/*.js' 'apps/**/*.js' '!packages/styleguidekit-assets-bolt/**/*'",
     "lint:js:fix": "yarn run lint:js -- --fix",
     "Xlint:sh": "which shellcheck; if [ $? -eq 0 ]; then shellcheck scripts/*.sh ; else echo 'Shell script linting requires `shellcheck` to be installed, skipping for now; use `brew install shellcheck` to install ~ https://github.com/koalaman/shellcheck '; fi",
-    "lint:style": "stylelint 'packages/**/*.scss' 'apps/**/*.scss' '!apps/drupal-lab/**' '!packages/styleguidekit-assets-bolt/**' '!apps/pw-site/www/**' '!**/vendor/**' --config .stylelintrc",
+    "lint:style": "stylelint 'packages/**/*.scss' 'apps/**/*.scss' '!apps/drupal-lab/**' '!packages/styleguidekit-assets-bolt/**' '!**/vendor/**' --config .stylelintrc",
     "lint:style:fix": "yarn run lint:style -- --fix",
     "lint:twig": "./packages/core-php/vendor/bin/twig-lint lint packages --only-print-errors && ./packages/core-php/vendor/bin/twig-lint lint apps --only-print-errors --exclude=apps/drupal-lab",
     "lint:yaml": "yamllint 'packages/**/*.yml' --ignore='**/vendor/**'",
@@ -77,16 +76,15 @@
     }
   },
   "devDependencies": {
-    "editorconfig-checker": "^1.2.0",
+    "editorconfig-checker": "^1.2.1",
     "husky": "^0.14.3",
-    "jest": "^22.4.0",
-    "lerna": "^2.5.1",
-    "node-fetch": "^2.0.0",
-    "now": "^11.0.6",
-    "npm-run-all": "^4.1.2",
-    "web-component-tester": "^6.6.0-pre.5",
-    "yaml-lint": "^1.2.2",
-    "git-semver-tags": "^1.3.6"
+    "jest": "^23.1.0",
+    "lerna": "^2.11.0",
+    "node-fetch": "^2.1.2",
+    "now": "^11.2.4",
+    "npm-run-all": "^4.1.3",
+    "yaml-lint": "^1.2.3",
+    "git-semver-tags": "^2.0.0"
   },
   "workspaces": [
     "packages/components/bolt-action-blocks",
@@ -115,7 +113,8 @@
     "packages/components/bolt-link",
     "packages/components/bolt-logo",
     "packages/components/bolt-nav-indicator",
-    "packages/components/bolt-nav-priority", "packages/components/bolt-navlink",
+    "packages/components/bolt-nav-priority",
+    "packages/components/bolt-navlink",
     "packages/components/bolt-navbar",
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-footer",
