fix: update smooth scroll library to use fork till https://github.com/cferdinandi/smooth-scroll/pull/443 is resolved

--- a/packages/components/bolt-smooth-scroll/package.json
+++ b/packages/components/bolt-smooth-scroll/package.json
@@ -36,6 +36,6 @@
   },
   "dependencies": {
     "@bolt/core": "^1.5.0",
-    "smooth-scroll": "^14.2.0"
+    "smooth-scroll": "github:bolt-design-system/smooth-scroll#master"
   }
 }
