refactor: manually port over, refactor, fix previously done search filter work + demos from early 2018

--- a/apps/pattern-lab/package.json
+++ b/apps/pattern-lab/package.json
@@ -50,6 +50,7 @@
     "@bolt/components-page-footer": "file:../../packages/components/bolt-page-footer",
     "@bolt/components-page-header": "^1.5.1",
     "@bolt/components-placeholder": "^1.5.1",
+    "@bolt/components-search-filter": "^0.0.0",
     "@bolt/components-share": "^1.5.1",
     "@bolt/components-site": "^1.5.1",
     "@bolt/components-smooth-scroll": "^1.5.1",
