--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "packages/components/bolt-site",
     "packages/components/bolt-smooth-scroll",
     "packages/components/bolt-sticky",
+    "packages/components/bolt-search-filter",
     "packages/components/bolt-teaser",
     "packages/components/bolt-text",
     "packages/components/bolt-tooltip",
