--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -22,6 +22,7 @@
     }
   ],
   "dependencies": {
+    "portfinder": "^1.0.13",
     "@bolt/babel-preset-bolt": "^1.5.0",
     "@theme-tools/sass-export-data": "^1.1.1",
     "@theme-tools/sass-import-globbing": "^1.0.1",
