--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,8 +11,7 @@
     "@webcomponents/shadydom": "^1.0.14",
     "@webcomponents/template": "^1.2.4",
     "@webcomponents/webcomponentsjs": "^1.1.0",
-    "breakpoint-sass": "^2.7.1",
-    "breakpoint-slicer": "bolt-design-system/breakpoint-slicer",
+    "sass-mq": "^5.0.0",
     "core-js": "^2.5.6",
     "document-register-element": "^1.9.0",
     "element-closest": "^2.0.2",
