--- a/apps/bolt-site/package.json
+++ b/apps/bolt-site/package.json
@@ -23,6 +23,7 @@
     "@bolt/components-background": "^1.5.2",
     "@bolt/components-background-shapes": "^1.5.2",
     "@bolt/components-band": "^1.5.2",
+    "@bolt/components-block-list": "^1.5.2",
     "@bolt/components-blockquote": "^1.5.2",
     "@bolt/components-breadcrumb": "^1.5.2",
     "@bolt/components-button": "^1.5.2",
@@ -30,24 +31,33 @@
     "@bolt/components-card": "^1.5.2",
     "@bolt/components-chip": "^1.5.2",
     "@bolt/components-chip-list": "^1.5.2",
+    "@bolt/components-copy-to-clipboard": "^1.5.2",
+    "@bolt/components-critical-fonts": "^1.5.2",
     "@bolt/components-device-viewer": "^1.5.2",
     "@bolt/components-figure": "^1.5.2",
+    "@bolt/components-form": "^1.5.2",
     "@bolt/components-headline": "^1.5.2",
     "@bolt/components-icon": "^1.5.2",
     "@bolt/components-image": "^1.5.2",
     "@bolt/components-link": "^1.5.2",
     "@bolt/components-logo": "^1.5.2",
-    "@bolt/components-nav": "^1.5.0-beta.0",
+    "@bolt/components-nav-indicator": "^1.5.2",
+    "@bolt/components-nav-priority": "^1.5.3",
     "@bolt/components-navbar": "^1.5.2",
     "@bolt/components-navlink": "^1.5.2",
     "@bolt/components-ordered-list": "^1.5.2",
-    "@bolt/components-page-footer": "^1.5.2",
+    "@bolt/components-page-footer": "file:../../packages/components/bolt-page-footer",
     "@bolt/components-page-header": "^1.5.2",
+    "@bolt/components-placeholder": "^1.5.2",
+    "@bolt/components-share": "^1.5.2",
     "@bolt/components-site": "^1.5.2",
     "@bolt/components-smooth-scroll": "^1.5.2",
     "@bolt/components-sticky": "^1.5.2",
     "@bolt/components-teaser": "^1.5.2",
+    "@bolt/components-text": "^1.5.2",
+    "@bolt/components-tooltip": "^1.5.2",
     "@bolt/components-unordered-list": "^1.5.2",
+    "@bolt/components-video": "^1.5.2",
     "@bolt/core": "^1.5.2",
     "@bolt/global": "^1.5.2",
     "broken-link-checker": "^0.7.7"
